--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gg/checkoutcom2",
+    "name": "checkoutcom/magento2",
     "description": "Checkout.com Payment Gateway for Magento 2",
     "require": {
         "php": "~5.5.0|~5.6.0|~7.0.0|~7.1",
